Thu Dec 09 17:50:17 GMT 2004  Olly Betts <olly@survex.com>

	* db/: Factored out duplicated stoplist code into stoplist.C and
	  stoplist.h; char * parameters -> const char * where appropriate;
	  local functions -> static; added missing space to usage message;
	  no need to explicitly flush Xapian db just before closing it.

Thu Dec 09 16:56:56 GMT 2004  Olly Betts <olly@survex.com>

	* README: Fixed a few inaccuracies.

Thu Dec 02 13:45:46 GMT 2004  Olly Betts <olly@survex.com>

	* perl/Query-script.pl: Fix generated HTML; comment out link to the old
	  bug address.

Wed Dec 01 19:57:52 GMT 2004  Olly Betts <olly@survex.com>

	* db/cvscommitsearch.C: Commenting improvements.
	* db/lines_db.C: Use wc to count lines in the file.
	* db/util.C: Covert _ to / in get_packages.
	* perl/CommitSearch-script.pl: Lose the <TBODY> tag; more comments.

Wed May 12 20:41:44 BST 2004  Olly Betts <olly@survex.com>

	* map/process/Makefile.am: Add pstream.h to list of files to
	  distribute.

Sat Mar 27 17:44:41 GMT 2004  Olly Betts <olly@survex.com>

	* perl/CommitSearch-script.pl: Added "use strict" and fixed code to
	  match; tidied up indentation.

Sat Mar 27 17:07:17 GMT 2004  Olly Betts <olly@survex.com>

	* perl/Query-script.pl: Fixed to output cvs revisions sorted
	  correctly.

Sat Mar 27 15:19:16 GMT 2004  Olly Betts <olly@survex.com>

	* amir/align.C,db/cvsrelatedindex.C,
	  map/map_algorithm/backward_map_algorithm.cpp: Cleaned up another
	  insecure temporary file creation, and flagged the last remaining
	  one (which is less easy to remove).

Sat Mar 27 15:10:18 GMT 2004  Olly Betts <olly@survex.com>

	* db/cvscommitindex.C,db/cvsfileindex.C,db/cvsmineindex.C: Removed
	  no longer relevant comments apparently left over from taking one
	  source file as the basis for another.

Sat Mar 27 15:07:53 GMT 2004  Olly Betts <olly@survex.com>

	* db/: Removed lots of source files which are no longer used.

Sat Mar 27 13:38:30 GMT 2004  Olly Betts <olly@survex.com>
